--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
   }
   
   .calculator {
-    background: #01b7ff;
+    background: #f9207e;
     padding: 30px;
     border-radius: 12px;
     box-shadow: 0 0 10px rgb(0, 0, 0);
